# kumokagi

./: .gitignore  CONTEXT.md  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_backend.md
.github/workflows/: ci-go.yml  ci-python.yml  ci.yml  docs.yml
cmd/kumokagi/: delete.go  get.go  init.go  init_test.go  list.go  main.go  prune.go  read.go  root.go  rotate.go  set.go  verify.go
docs/: go.mod  go.sum  hugo.toml  package-lock.json
docs/_vendor/: modules.txt
docs/adr/: 0001-no-in-memory-cache.md  0002-env-first-path-convention.md  0003-source-not-standalone.md  0004-vault-v1-backend.md
docs/content/: _index.md
docs/diagrams/: generate.py
docs/site/: go.mod  hugo.toml
docs/static/: browserconfig.xml  site.webmanifest
internal/aws/: client.go  client_test.go
internal/azure/: client.go  client_test.go
internal/gcp/: client.go  client_test.go
internal/onepassword/: client.go  client_test.go
internal/vault/: client_test.go
pkg/config/: allowlist_test.go  config.go  config_test.go
pkg/factory/: factory.go  factory_registration_test.go
pkg/provider/: provider.go  provider_test.go
pkg/vipersource/: source.go  source_test.go
python/: pyproject.toml
python/kumokagi/: __init__.py  aws.py  azure.py  config.py  factory.py  gcp.py  onepassword.py  provider.py  settings.py  vault.py
python/tests/: conftest.py  test_aws.py  test_azure.py  test_config.py  test_gcp.py  test_onepassword.py  test_settings.py  test_validation.py  test_vault.py
(+63 files in other folders)
