[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kumokagi"
version = "0.1.0"
description = "Ephemeral secrets management — pydantic-settings source for HashiCorp Vault"
requires-python = ">=3.12"
dependencies = [
    "hvac>=2.3.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
azure = ["azure-keyvault-secrets>=4.8", "azure-identity>=1.16"]
gcp = ["google-cloud-secret-manager>=2.20"]
dev = [
    "pytest>=8.3.0",
    "responses>=0.25.0",
    "pytest-cov>=6.0.0",
    "moto[secretsmanager]>=5.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
